# icfp-contest-2016

./: LICENSE  README.md  icfp-contest.cabal
app/: Main.hs
src/Origami/: Folding.hs  Numbers.hs  Paper.hs  Problem.hs  REST.hs  Silhouette.hs  Skeleton.hs  Solution.hs
