name:                icfp-contest
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/eamsden/icfp-contest#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Amsden
maintainer:          edwardamsden@gmail.com
copyright:           2016 © Edward Amsden
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Origami.Numbers
                       Origami.Problem
                       Origami.REST
                       Origami.Skeleton
                       Origami.Silhouette
                       Origami.Solution
  build-depends:       base >= 4.7 && < 5
                     , text
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , vector
                     , bimap
                     , containers
                     , lens
                     , bytestring
                     , aeson
                     , servant
                     , servant-client
                     , http-client
                     , http-media
                     , mtl
                     , attoparsec
                     , time
                     , lens-aeson
                     , lens
  default-language:    Haskell2010

executable icfp-contest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfp-contest
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , vector
                     , bimap
                     , attoparsec
                     , containers
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eamsden/icfp-contest-2016.git
